# telegram-bot-template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  compose.env  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: deploy_backend.yml
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/alembic/versions/: ad362c343940_initial.py
{{cookiecutter.project_slug}}/ansible/: deploy.yml  hosts
{{cookiecutter.project_slug}}/ansible/group_vars/: all.yaml  stage.yaml
{{cookiecutter.project_slug}}/ansible/templates/: docker-compose.yml.j2  env.j2
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/core/: config.py
{{cookiecutter.project_slug}}/app/db/: base_class.py  init_db.py  session.py
{{cookiecutter.project_slug}}/app/handlers/: base.py
{{cookiecutter.project_slug}}/app/models/: base.py
{{cookiecutter.project_slug}}/app/services/: analytics.py  storage.py
